--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: install dependencies
-        run: |
-          pip install -r requirements
-          pip install --upgrade coveralls
+        run: pip install -U pip coveralls
+      - name: build native depedencies
+        run: make build
       - name: Run tests!
         run: coverage run -m unittest
       - name: Log coverage
