--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
       - name: Run tests!
         run: |
           ulimit -c unlimited
+          echo '/tmp/core.%h.%e.%t' > /proc/sys/kernel/core_pattern
           coverage run -m unittest
       - name: Log coverage
         env:
@@ -27,4 +28,4 @@ jobs:
         run: coveralls
       - name: is there a core dump?
         if: ${{ failure() }}
-        run: ls -lR
+        run: ls -lR /tmp
