--- a/wirehair/CMakeLists.txt
+++ b/wirehair/CMakeLists.txt
@@ -56,7 +56,7 @@ set(GEN_TABLES
 
 if(MSVC)
 else()
-    set(CMAKE_CXX_FLAGS "-Wall -Wextra")
+    set(CMAKE_CXX_FLAGS "-Wall -Wextra -static-libgcc -static-libstdc++")
     set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -march=native")
     set(CMAKE_CXX_FLAGS_RELEASE "-g -O2 -march=native")
 endif()
