--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,17 +14,14 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: install dependencies
-        run: pip install -U pip coveralls
+        run: sudo pip install -U pip coveralls
       - name: build native depedencies
         run: make build
       - name: Run tests!
         run: |
           ulimit -c unlimited
-          sudo python3 -m unittest discover -s tests/
+          sudo coverage3 run -m unittest discover -s tests/
       - name: Log coverage
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: coveralls
-      - name: is there a core dump?
-        if: ${{ failure() }}
-        run: ls -lR /cores
