--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: install dependencies
-        run: sudo pip3 install -U coveralls coverage
+        run: pip install -U pip coveralls
       - name: build native code
         run: make build
+      - name: which python?
+        run: which python
       - name: Run tests!
         run: sudo coverage3 run -m unittest discover -s tests/
       - name: Log coverage
