--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,9 @@ jobs:
       - name: which python?
         run: which coverage
       - name: Run tests!
-        run: sudo $(which coverage) run -m unittest discover -s tests/
+        run: |
+          ulimit -c unlimited
+          sudo /opt/hostedtoolcache/Python/3.7.9/x64/bin/python run -m unittest discover -s tests/
       - name: Log coverage
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
