--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,12 @@ jobs:
       - name: Run tests!
         run: |
           ulimit -c unlimited
-          sudo /opt/hostedtoolcache/Python/3.7.9/x64/bin/python run -m unittest discover -s tests/
+          sudo echo '/tmp/core.%h.%e.%t' > /proc/sys/kernel/core_pattern
+          sudo $(which coverage) run -m unittest discover -s tests/
       - name: Log coverage
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: coveralls
+      - name: is there a core dump?
+        if: ${{ failure() }}
+        run: ls -lR /tmp
