--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,11 +22,8 @@ jobs:
       - name: Run tests!
         run: |
           ulimit -c unlimited
-          sudo $(which python3) -m unittest discover -s tests/
+          sudo python3 -m unittest discover -s tests/
       - name: Log coverage
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: coveralls
-      - name: is there a core dump?
-        if: ${{ failure() }}
-        run: ls -lR /tmp
