--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Run tests!
         run: |
           ulimit -c unlimited
-          sudo python3 -m unittest discover -s tests/
+          sudo $(which coverage3) -m unittest discover -s tests/
       - name: Log coverage
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
