--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,14 +17,10 @@ jobs:
         run: pip install -U pip coveralls
       - name: build native code
         run: make build
-      - name: which python?
-        run: which python3
-      - name: which python root?
-        run: sudo which python3
       - name: Run tests!
         run: |
           ulimit -c unlimited
-          sudo python3 run -m unittest discover -s tests/
+          python3 -m unittest discover -s tests/
       - name: Log coverage
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
