--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,10 @@ jobs:
         run: pip install -U pip coveralls
       - name: build native code
         run: make build
+      - name: system python version
+        run: sudo python3 --version
+      - name: my python version
+        run: python3 --version
       - name: Run tests!
         run: |
           ulimit -c unlimited
