--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,15 +13,9 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: install dependencies
-        run: pip install -U pip coveralls
       - name: build native code
         run: make build
+      - name: system python version
+        run: /usr/bin/python3 --version
       - name: Run tests!
-        run: |
-          ulimit -c unlimited
-          python3 -m unittest discover -s tests/
-      - name: Log coverage
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: coveralls
+        run: /usr/bin/python3 -m unittest
