--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,18 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+      - name: install dependencies
+        run: pip install -U pip coveralls
       - name: build native code
         run: make build
-      - name: system python version
-        run: /usr/bin/python3 --version
       - name: Run tests!
-        run: /usr/bin/python3 -m unittest
+        run: |
+          ulimit -c unlimited
+          sudo $(which python3) -m coverage run -m unittest discover -s tests/
+      - name: Log coverage
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: coveralls
+      - name: is there a core dump?
+        if: ${{ failure() }}
+        run: ls -lR /cores
